--- a/.gitignore
+++ b/.gitignore
@@ -2,32 +2,24 @@
 
 # dependencies
 /node_modules
-
+/.pnp
+.pnp.js
 package-lock.json
 .env
 
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
-
-# dependencies
-/client/node_modules
-/client/.pnp
-/client/.pnp.js
-/client/package-lock.json
-/client/.env
-
 # testing
-/client/coverage
+/coverage
 
 # production
-/client/build
+/build
 
 # misc
-/client/.DS_Store
-/client/.env.local
-/client/.env.development.local
-/client/.env.test.local
-/client/.env.production.local
+.DS_Store
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
 
-/client/npm-debug.log*
-/client/yarn-debug.log*
-/client/yarn-error.log*
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
